chat z-index fixed

--- a/webApp/client/style.css
+++ b/webApp/client/style.css
@@ -624,6 +624,7 @@
     position: fixed;
     bottom:0;
     right: 1%;
+    z-index: 999;
 
     width: 40%;
     height: 60%;
